kubernetes/apps/media/calibre2/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre2
  annotations:
    gatus.home-operations.com/endpoint: |
      client:
        dns-resolver: tcp://${UNIFI_HOST}:53
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "calibre.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: calibre2
          port: 8081
